--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,20 @@
 {{ partial "header.html" . }}
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-          <span class="d-block d-lg-none">Jean-Christophe Fabre</span>
-          <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/JC2020_profile_BW.png" alt="" /></span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-          {{ range $index, $page := .Data.Pages.ByWeight }}
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#{{ .File.BaseFileName }}">{{ .Title }}</a></li>
-          {{ end }}
-          </ul>
-      </div>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <span class="d-block d-lg-none">Jean-Christophe Fabre</span>
+        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/JC2020_profile_BW.png" alt="" /></span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+        {{ range $index, $page := .Data.Pages.ByWeight }}
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#{{ .File.BaseFileName }}">{{ .Title }}</a></li>
+        {{ end }}
+        </ul>
+    </div>
   </nav>
   <!-- Page Content-->
   <div class="container-fluid p-0">
