--- a/assets/sass/jnchrstph.scss
+++ b/assets/sass/jnchrstph.scss
@@ -26,6 +26,32 @@ h2 {
 }
 
 
+.legal {
+  .btn-legal {
+    font-size: 80%;
+    font-weight: bolder;
+    background-color: none;
+    color: lighten($jcBlue,30%);
+    border: 1px solid lighten($jcBlue,30%);
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    padding : 2px;
+    padding-left : 5px;
+    padding-right : 5px;
+    width : 25px;
+    height : 25px;
+  }
+
+  .popover-body {
+    font-size: 80%;
+
+    p {
+      margin-bottom: 0px;
+    }
+  }
+}
+
+
 ul.timeline {
   list-style-type: none;
   position: relative;
