--- a/assets/sass/jnchrstph.scss
+++ b/assets/sass/jnchrstph.scss
@@ -1,12 +1,45 @@
-
+@import 'fonts.scss';
 
 $jcBlue : #26517c;
 $jcOrange : #ff7400;
+
+/*
 $jcGreen : #5dc72c;
 
+$jcText : #343a40;
+$jcTitle1 : $jcText;
+$jcTitle2 : $jcOrange;
+$jcSubtitle : #495057;
+$jcBackground : #f7f7f7; //#0a192f;
+$jcMenu : $jcBlue;
+$jcIntern : $jcGreen;
+*/
+ 
+// dark version
+
+$jcBlue : #5CCCCC;
+$jcText : #ccc;
+$jcTitle1 : $jcBlue;
+$jcTitle2 : $jcOrange;
+$jcSubtitle : #bbb;
+$jcBackground : #001920; //#0a192f;
+$jcMenu : $jcBackground;
+$jcIntern : $jcBlue;
+
+$jcTextFontFamily : 'Poppins', sans-serif;
+$jcTitleFontFamily : 'Roboto', sans-serif;
+$jcMonoFontFamily : monospace;
+
+
+body {
+  background-color: $jcBackground;
+  color : $jcText !important;
+  font-family: $jcTextFontFamily !important;
+  font-size: 13pt !important;
+}
 
 .bg-primary {
-  background-color: $jcBlue !important;
+  background-color: $jcMenu !important;
 }
 
 .text-primary {
@@ -21,10 +54,40 @@ a, a:hover {
   background-color: $jcOrange;
 }
 
-h2 {
-  color: $jcOrange;
+
+h1, .h1 {
+  color: $jcTitle1 !important;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
 }
 
+h2, .h2 {
+  color: $jcTitle2;
+  font-family: $jcTitleFontFamily;
+  font-weight: 400;
+}
+
+h3, .h3,
+h4, .h4,
+h5, .h5 {
+  color: $jcSubtitle !important;
+  
+  font-family: $jcTitleFontFamily;
+  font-weight: 700;
+}
+
+h6, .h6 {
+  color: darken($jcSubtitle,20%) !important;
+}
+
+.nav-item a {
+  font-family: $jcTitleFontFamily;
+  font-weight: 400;
+}
+
+.img-profile {
+  border: 0.5rem solid $jcBlue !important;
+}
 
 .legal {
   .btn-legal {
@@ -40,14 +103,6 @@ h2 {
     padding-right : 5px;
     width : 25px;
     height : 25px;
-  }
-
-  .popover-body {
-    font-size: 80%;
-
-    p {
-      margin-bottom: 0px;
-    }
   }
 }
 
@@ -76,7 +131,7 @@ ul.timeline {
   
     &:before {
       content: ' ';
-      background: white;
+      background: $jcBackground;
       display: inline-block;
       position: absolute;
       border-radius: 50%;
@@ -89,7 +144,7 @@ ul.timeline {
   
     .badge-timeline {
       background-color: $jcBlue;
-      color : #fff;
+      color : #aaa;
       padding : 6px;
     }
   }
@@ -101,9 +156,9 @@ div.internship {
   .btn,
   .btn:hover
   {
-    background-color: #fff;
-    color : $jcGreen;
-    border : 1px solid $jcGreen;
+    background: $jcBackground;
+    color : $jcIntern;
+    border : 1px solid $jcIntern;
     font-weight: normal;
     padding : 2px;
     padding-left : 5px;
@@ -114,7 +169,7 @@ div.internship {
   p {
     padding-left : 10px;
     margin-left : 10px;
-    border-left : 1px solid $jcGreen;
+    border-left : 1px solid $jcIntern;
 
     span.title {
       font-weight: bold;
@@ -124,6 +179,7 @@ div.internship {
 
 
 .works-card {
+  background: $jcBackground;
   border : 1px solid $jcBlue;
 }
 
@@ -139,27 +195,79 @@ div.internship {
   font-size: 90%;
 }
 
-div.experience-details {
+div.experience-facts {
   padding-left : 10px;
   margin-left : 10px;
   border-left : 3px solid $jcBlue;
+
+  ul {
+    font-size: 90%;
+  }
 }
 
-p.experience-details-text {
-  font-style: italic;
-}
-
-p.experience-details-emojis {
+p.experience-emojis {
   font-size : 150%
 }
 
+.skills {
+
+  .col {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .skills-icon {
+    font-size: 250%;
+    text-align: center;
+    color: $jcBlue;
+  }
+
+  .skills-title {
+    margin-top : 10px;
+    text-align: center;
+    font-size: 150%;
+    vertical-align: middle;
+  }
+
+  .skills-text {
+    margin : 20px;
+    text-align: justify;
+  }
+
+  .skills-tags {
+    text-align: center;
+
+    .badge {
+      margin: 5px;
+      padding-left : 5px;
+      padding-right : 5px;
+      background : none !important;
+      border : 1px solid $jcOrange;
+      color : $jcBlue;
+      border-radius : 20px;
+      -webkit-border-radius : 20px;
+    }
+  
+    .badge-major {
+      padding : 10px;
+      font-size : 110%;
+    }
+    .badge-medium {
+      padding : 8px;
+      font-size : 90%;
+    }
+    .badge-minor {
+      font-size : 70%;
+    }
+  }
+}
 
 
 .plus-life {
   font-size: 250%;
-  padding : 5px;
-  border : 1px solid lightgray;
-  border-radius: 15px;
+  padding : 15px;
+/*  border : 1px solid lightgray;
+  border-radius: 15px;*/
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
 }
