--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,11 +2,12 @@
 <html lang="{{ .Lang }}">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="{{ $.Site.BaseURL }}/images/favicon.png">
     <title>{{ .Site.Title }}</title>
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="{{ $.Site.BaseURL }}/js/jquery-3.5.1.min.js"></script>
+    <script src="{{ $.Site.BaseURL }}/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="{{ $.Site.BaseURL }}/css/bootstrap.min.css">
     {{ $SASSoptions := (dict "targetPath" "css/jnchrstph.css" "enableSourceMap" true) -}}
     {{- $CSS := resources.Get "sass/jnchrstph.scss" | toCSS $SASSoptions -}}
     <link href="{{ $.Site.BaseURL }}/css/resume-style.css" rel="stylesheet" />
