--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
       <button class="btn btn-legal" data-container="body" data-toggle="legal-popover" data-placement="bottom">i</a>
       <div id='legal-popover-content' style='display:none;'>
         <p class="text-center">
-          Fait maison par<br>
+          Fait main par<br>
           Jean-Christophe Fabre<br/>
           <br/>
           Construit avec<br/>
