--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,7 @@
-    <!-- Third party plugin JS-->
+    <script>
+      feather.replace()
+    </script>
+<!-- Third party plugin JS-->
     <script src="{{ $.Site.BaseURL }}/js/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="{{ $.Site.BaseURL }}/js/resume-script.js"></script>
