--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="{{ $.Site.BaseURL }}/images/favicon.png">
     <title>{{ .Site.Title }}</title>
-    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="{{ $.Site.BaseURL }}/js/feather.min.js"></script>
     <script src="{{ $.Site.BaseURL }}/js/jquery-3.5.1.min.js"></script>
     <script src="{{ $.Site.BaseURL }}/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="{{ $.Site.BaseURL }}/css/bootstrap.min.css">
