--- a/layouts/partials/renderers/about.html
+++ b/layouts/partials/renderers/about.html
@@ -22,7 +22,7 @@
   <a href="mailto:{{ .Params.email }}">{{ .Params.email }}</a>
 </div>
 <div class="social-icons mb-5">
-  <a class="social-icon" href="{{ .Params.linkedin }}"><i class="fab fa-linkedin-in"></i></a>
-  <a class="social-icon" href="{{ .Params.github }}"><i class="fab fa-github"></i></a>
-  <a class="social-icon" href="{{ .Params.twitter }}"><i class="fab fa-twitter"></i></a>
+  <a class="social-icon" href="{{ .Params.linkedin }}"><i data-feather="linkedin" style="fill:currentColor;"></i></a>
+  <a class="social-icon" href="{{ .Params.github }}"><i data-feather="github"></i></a>
+  <a class="social-icon" href="{{ .Params.twitter }}"><i data-feather="twitter"></i></a>
 </div>
