Add of a PDF resume

--- a/assets/sass/jnchrstph.scss
+++ b/assets/sass/jnchrstph.scss
@@ -92,6 +92,11 @@ h6, .h6 {
   border: 0.5rem solid $jcBlue !important;
 }
 
+a.pdf-link {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .legal {
   .btn-legal {
     font-size: 80%;
