--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,6 +15,7 @@
         {{ end }}
         </ul>
     </div>
+    <a class="pdf-link" href="resources/{{ $.Site.Params.CVfile }}" target="_blank">CV en PDF</a>
     <div class="legal">
       <button class="btn btn-legal" data-container="body" data-toggle="legal-popover" data-placement="bottom">i</a>
       <div id='legal-popover-content' style='display:none;'>
