--- a/docs/css/jnchrstph.css
+++ b/docs/css/jnchrstph.css
@@ -114,6 +114,10 @@ h6, .h6 {
 .img-profile {
   border: 0.5rem solid #5CCCCC !important; }
 
+a.pdf-link {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
 .legal .btn-legal {
   font-size: 80%;
   font-weight: bolder;
