Replaced Twitter link by Strava link

--- a/layouts/partials/renderers/about.html
+++ b/layouts/partials/renderers/about.html
@@ -24,5 +24,5 @@
 <div class="social-icons mb-5">
   <a class="social-icon" href="{{ .Params.linkedin }}"><i data-feather="linkedin" style="fill:currentColor;"></i></a>
   <a class="social-icon" href="{{ .Params.github }}"><i data-feather="github"></i></a>
-  <a class="social-icon" href="{{ .Params.twitter }}"><i data-feather="twitter"></i></a>
+  <a class="social-icon" href="{{ .Params.strava }}"><img src="{{ $.Site.BaseURL }}/images/strava.svg" style="height:1.2em;"></a>
 </div>
