Minor updates in skills

--- a/layouts/partials/renderers/about.html
+++ b/layouts/partials/renderers/about.html
@@ -22,7 +22,7 @@
   <a href="mailto:{{ .Params.email }}">{{ .Params.email }}</a>
 </div>
 <div class="social-icons mb-5">
-  <a class="social-icon" href="{{ .Params.linkedin }}"><i data-feather="linkedin" style="fill:currentColor;"></i></a>
-  <a class="social-icon" href="{{ .Params.github }}"><i data-feather="github"></i></a>
-  <a class="social-icon" href="{{ .Params.strava }}"><img src="{{ $.Site.BaseURL }}/images/strava.svg" style="height:1.2em;"></a>
+  <a class="social-icon" href="{{ .Params.linkedin }}" alt="LinkedIn page"><i data-feather="linkedin" style="fill:currentColor;" alt="LinkedIn logo"></i></a>
+  <a class="social-icon" href="{{ .Params.github }}" alt="GitHub page"><i data-feather="github" alt="GitHub logo"></i></a>
+  <a class="social-icon" href="{{ .Params.strava }}" alt="Strava page"><img src="{{ $.Site.BaseURL }}/images/strava.svg" style="height:1.2em;" alt="Strava logo"></a>
 </div>
