--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Jean-Christophe Fabre</span>
-        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/JC2020_profile_BW.png" alt="" /></span>
+        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/JC2020_profile_BW.png" alt="Photo of Jean-Christophe Fabre" /></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,11 +25,11 @@
           <br/>
           Construit avec<br/>
           <a href="https://getbootstrap.com/" target="_blank">
-            <img src="{{ $.Site.BaseURL }}/images/bootstrap.svg" height="28px">
+            <img src="{{ $.Site.BaseURL }}/images/bootstrap.svg" height="28px" alt="Bootstrap logo">
           </a>
           &nbsp;+&nbsp; 
           <a href="https://gohugo.io/" target="_blank">
-            <img src="{{ $.Site.BaseURL }}/images/gohugo.svg" height="28px">
+            <img src="{{ $.Site.BaseURL }}/images/gohugo.svg" height="28px" alt="Hugo logo">
           </a><br/>
           <br/>
           Contenu sous licence<br/>
